Add autoplay looping video in About section

--- a/index.html
+++ b/index.html
@@ -278,13 +278,16 @@
 
     </div>
 
-    <!-- RIGHT IMAGE -->
-    <div class="about-image">
-      <img src="images/img3.jpeg" alt="Debangshu Sadhukhan">
-    </div>
-
+    <!-- RIGHT IMAGE / VIDEO -->
+  <div class="about-image">
+    <video 
+      src="VIDEO/VIDEO1.mp4"
+      autoplay
+      loop
+      muted
+      playsinline>
+    </video>
   </div>
-</section>
 
 <!-- ================== CSS ================== -->
 <style>
@@ -332,6 +335,11 @@
   height: 100%;
   object-fit: cover;
 }
+.about-image video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 /* RESPONSIVE */
 @media (max-width: 900px) {
@@ -344,7 +352,7 @@
   }
 }
 </style>
-
+  
 
 <!-- EDUCATION -->
 <section data-aos="fade-up">
