Add autoplay looping video to About section

--- a/index.html
+++ b/index.html
@@ -278,16 +278,15 @@
 
     </div>
 
-    <!-- RIGHT IMAGE / VIDEO -->
-  <div class="about-image">
-    <video 
-      src="VIDEO/VIDEO1.mp4"
-      autoplay
-      loop
-      muted
-      playsinline>
-    </video>
+    <!-- RIGHT IMAGE -->
+    <div class="about-image">
+      <video src="VIDEO/VIDEO1.mp4" alt="Debangshu Sadhukhan" autoplay loop muted>
+      
+      </video>
+    </div>
+
   </div>
+</section>
 
 <!-- ================== CSS ================== -->
 <style>
@@ -335,11 +334,6 @@
   height: 100%;
   object-fit: cover;
 }
-.about-image video {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
 
 /* RESPONSIVE */
 @media (max-width: 900px) {
@@ -352,7 +346,7 @@
   }
 }
 </style>
-  
+
 
 <!-- EDUCATION -->
 <section data-aos="fade-up">
